@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<testsuite name="test_errorfail_output" errors="1" failures="1" tests="1" time="0.026" hostname="unknown" timestamp="2015-04-13T18:03:48">
+<testsuite name="test_errorfail_output" errors="1" failures="1" tests="1" time="0.03" hostname="unknown" timestamp="2015-04-14T11:37:21">
   <properties/>
   <testcase classname="test_errorfail_output" name="test_success">
     <error><![CDATA[Error in tear_down fixture:
